[gd_scene load_steps=23 format=2]

[ext_resource path="res://scenes/entities/units/vehicles/uh1d/uh1d.obj" type="ArrayMesh" id=1]
[ext_resource path="res://scenes/entities/units/vehicles/uh1d/heli_glass_material.tres" type="Material" id=2]
[ext_resource path="res://scenes/entities/units/vehicles/uh1d/door.obj" type="ArrayMesh" id=3]
[ext_resource path="res://scenes/entities/units/vehicles/uh1d/landing.obj" type="ArrayMesh" id=4]
[ext_resource path="res://scenes/entities/units/vehicles/uh1d/heli_body_material.tres" type="Material" id=5]
[ext_resource path="res://scenes/entities/units/vehicles/uh1d/back_rotor.obj" type="ArrayMesh" id=6]
[ext_resource path="res://scenes/entities/units/vehicles/uh1d/main_rotor.obj" type="ArrayMesh" id=7]
[ext_resource path="res://scenes/entities/units/vehicles/uh1d/uh1d.gd" type="Script" id=8]
[ext_resource path="res://assets/sounds/vehicle/heli.ogg" type="AudioStream" id=9]
[ext_resource path="res://assets/tile_highlight/circle_selection.obj" type="ArrayMesh" id=10]
[ext_resource path="res://addons/Godot-Touch-Input-Manager/input_detection.tscn" type="PackedScene" id=12]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.113725, 0.113725, 0.113725, 1 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.439216, 0.439216, 0.439216, 1 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/door_l:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.376094, 0.0839181, -0.698595 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/door_r:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -0.370649, 0.0752647, -0.752648 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/door_l:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("pivot/door_r:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -180, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("pivot:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 180, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "door_close"
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/door_l:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.376094, 0.0839181, -0.698595 ), Vector3( 0.376094, 0.0839181, 0.00785563 ), Vector3( 0.334924, 0.0839181, 0.00785562 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/door_r:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -0.370649, 0.0752647, -0.752648 ), Vector3( -0.370649, 0.0752647, -0.651726 ), Vector3( -0.370649, 0.0752647, -0.651726 ), Vector3( -0.370649, 0.0752647, -0.0461964 ), Vector3( -0.338146, 0.0752647, -0.0461964 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "door_open"
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/door_l:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0.334924, 0.0839181, 0.00785562 ), Vector3( 0.376094, 0.0839181, 0.00785563 ), Vector3( 0.376094, 0.0839181, -0.698595 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/door_r:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -0.338146, 0.0752647, -0.0461964 ), Vector3( -0.370649, 0.0752647, -0.0461964 ), Vector3( -0.370649, 0.0752647, -0.651726 ), Vector3( -0.370649, 0.0752647, -0.651726 ), Vector3( -0.370649, 0.0752647, -0.752648 ) ]
}

[sub_resource type="Animation" id=24]
resource_name = "foward"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("pivot:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, -180, 0 ), Vector3( 15, -180, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "iddle"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/door_l:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.334924, 0.0839181, 0.00785562 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/door_l:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/door_r:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -180, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("pivot/door_r:translation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -0.338146, 0.0752647, -0.0461964 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("pivot:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 180, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "landing"
length = 1.7
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/door_l:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.334924, 0.0839181, 0.00785562 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/door_l:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/door_r:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -180, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("pivot/door_r:translation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -0.338146, 0.0752647, -0.0461964 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("pivot:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 1.1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 180, 0 ), Vector3( 0, 180, 0 ), Vector3( -21.803, 180, 0 ), Vector3( -7.675, 180, 0 ), Vector3( 0, 180, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "take_off"
tracks/0/type = "value"
tracks/0/path = NodePath("pivot/door_l:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0.334924, 0.0839181, 0.00785562 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("pivot/door_l:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("pivot/door_r:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, -180, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("pivot/door_r:translation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -0.338146, 0.0752647, -0.0461964 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("pivot:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 180, 0 ), Vector3( 14.921, 180, 0 ), Vector3( 3.571, 180, 0 ), Vector3( 0, 180, 0 ) ]
}

[sub_resource type="CylinderShape" id=23]
height = 0.648616
radius = 0.586769

[sub_resource type="SpatialMaterial" id=12]
flags_unshaded = true
albedo_color = Color( 1, 0.984314, 0.972549, 1 )

[node name="uh1d" type="Spatial"]
script = ExtResource( 8 )
speed = 4.0
hp = 100
max_hp = 100
fuel_cost = 0
altitude = 2.0
is_air = true

[node name="pivot" type="Spatial" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0.403305, 0 )

[node name="body" type="MeshInstance" parent="pivot"]
mesh = ExtResource( 1 )
skeleton = NodePath("../..")
software_skinning_transform_normals = false
material/0 = ExtResource( 5 )
material/1 = ExtResource( 2 )
material/2 = SubResource( 1 )
material/3 = SubResource( 2 )

[node name="main_rotor" type="MeshInstance" parent="pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.88479e-08, 0.605248, -0.215595 )
mesh = ExtResource( 7 )
skeleton = NodePath("../..")
software_skinning_transform_normals = false

[node name="back_rotor" type="MeshInstance" parent="pivot"]
transform = Transform( -0.0127754, 0.999918, -8.85396e-08, -0.999918, -0.0127754, -8.74156e-08, -8.85396e-08, 8.74156e-08, 1, 0.0823781, 0.446419, -2.99256 )
mesh = ExtResource( 6 )
skeleton = NodePath("../..")
software_skinning_transform_normals = false

[node name="landing" type="MeshInstance" parent="pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00428033, -0.221287, 3.74198e-10 )
mesh = ExtResource( 4 )
skeleton = NodePath("../..")
software_skinning_transform_normals = false

[node name="door_l" type="MeshInstance" parent="pivot"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.376094, 0.0839181, -0.698595 )
mesh = ExtResource( 3 )
skeleton = NodePath("../..")
software_skinning_transform_normals = false
material/0 = ExtResource( 5 )
material/1 = ExtResource( 2 )

[node name="door_r" type="MeshInstance" parent="pivot"]
transform = Transform( -1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -0.370649, 0.0752647, -0.752648 )
mesh = ExtResource( 3 )
skeleton = NodePath("../..")
software_skinning_transform_normals = false
material/0 = ExtResource( 5 )
material/1 = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "door_close"
anims/RESET = SubResource( 3 )
anims/door_close = SubResource( 5 )
anims/door_open = SubResource( 4 )
anims/foward = SubResource( 24 )
anims/iddle = SubResource( 6 )
anims/landing = SubResource( 7 )
anims/take_off = SubResource( 8 )

[node name="input_detection" parent="." instance=ExtResource( 12 )]

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.578656, 0 )
collision_layer = 4
collision_mask = 0
monitorable = false

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.236412, 0 )
shape = SubResource( 23 )

[node name="circle" type="MeshInstance" parent="."]
transform = Transform( 1.4, 0, 0, 0, 1.4, 0, 0, 0, 1.4, 0, -0.25, 0 )
cast_shadow = 0
mesh = ExtResource( 10 )
software_skinning_transform_normals = false
material/0 = SubResource( 12 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 9 )
autoplay = true

[connection signal="on_finish_travel" from="." to="." method="_on_uh1d_on_finish_travel"]
[connection signal="any_gesture" from="input_detection" to="." method="_on_input_detection_any_gesture"]
